# tinbox

./: .gitignore  AGENTS.md  CLAUDE.md  QUICKSTART_GUI.md  README.md  pyproject.toml
.github/workflows/: ci.yml
electron/: .gitignore  README.md  index.html  main.js  package.json  preload.js
electron/src/: App.tsx
electron/src/components/: DropZone.tsx  Icons.tsx  ProgressCard.tsx  SettingsModal.tsx  TranslationQueue.tsx
electron/src/hooks/: useTranslation.ts  useWebSocket.ts
electron/src/store/: useStore.ts
electron/src/styles/: index.css
electron/src/types/: api.ts  electron.d.ts
electron/src/utils/: api.ts
examples/: process_document.py
src/tinbox/: cli.py
src/tinbox/api/: __init__.py  jobs.py  models.py  server.py
src/tinbox/core/: __init__.py  cost.py  doctor.py  output.py  progress.py  types.py
src/tinbox/core/processor/: __init__.py  docx.py  pdf.py  text.py
src/tinbox/core/translation/: __init__.py  algorithms.py  checkpoint.py  glossary.py  interface.py  litellm.py
src/tinbox/utils/: chunks.py  language.py  logging.py
tests/: conftest.py  test_cli.py  test_gpt5_support.py
tests/test_core/: test_cost.py  test_output.py  test_processor.py  test_progress.py
tests/test_core/test_processors/: test_pdf_processor.py  test_text_processor.py  test_word_processor.py
tests/test_core/test_translation/: test_algorithms.py  test_checkpoint.py  test_context_aware.py  test_context_separation.py  test_glossary.py  test_litellm.py  test_litellm_glossary.py  test_reasoning_effort.py  test_whitespace_preservation.py
